# colgado

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.es.md  README.md  build.sh
colgado-gui/: Cargo.toml
colgado-gui/src/: lib.rs  main.rs  tasks.rs
colgado-logic/: Cargo.toml
colgado-logic/src/: errors.rs  lib.rs  word.rs
colgado-logic/src/actors/: game_actor.rs  message_actor.rs  mod.rs
colgado-logic/src/models/: game_view.rs  handles.rs  messages.rs  mod.rs
colgado-requests/: Cargo.toml
colgado-requests/src/: lib.rs  requests.rs  util.rs
colgado-requests/src/models/: file_variables.rs  send_msg_request.rs
colgado-requests/src/token_getter/: token_flow.rs
