[package]
name = "colgado-gui"
version = "0.1.0"
edition = "2021"

[dependencies.colgado-logic]
path = "../colgado-logic"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
iced_futures = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }


[[bin]]
name = "colgado"
path = "src/main.rs"
