[package]
name = "colgado-gui"
version = "0.2.0"
edition = "2021"
include = ["../.env.toml"]

[dependencies.colgado-logic]
path = "../colgado-logic"

[dependencies]
dark-light = "2.0.0"
iced = { version = "0.13.1", features = ["tokio", "image"] }
iced_futures = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }


[[bin]]
name = "colgado"
path = "src/main.rs"
