[package]
name = "colgado-logic"
version = "0.1.0"
edition = "2021"

[dependencies.colgado-requests]
path = "../colgado-requests"

[dependencies]
serde_json = "1.0.128"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tungstenite = "0.24.0"

unicode-segmentation = "1.12.0"
thiserror = "2.0.0"
