[package]
name = "colgado-logic"
version = "0.2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.128"
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tungstenite = "0.24.0"
trequests = { git = "https://github.com/fravian99/trequests.git" }
unicode-segmentation = "1.12.0"
thiserror = "2.0.0"